# edgeforge-core

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  conftest.py  pyproject.toml
edgeforge/: __init__.py  cli.py
edgeforge/codegen/: __init__.py  arena_planner.py  codegen.py  graph_compiler.py  model_extractor.py
edgeforge/converter/: __init__.py  analyzer.py  detector.py  to_onnx.py
edgeforge/optimizer/: __init__.py  budget.py  optimizer.py  quantizer.py  simplifier.py
edgeforge/targets/: __init__.py  loader.py
models/: test_model.onnx  test_model_opt.onnx
scripts/: generate_test_model.py  release.py
targets/: nrf52840.yaml  psoc6.yaml  stm32f407.yaml
templates/: CMakeLists.jinja2  README.jinja2  inference_runner_c.jinja2  inference_runner_h.jinja2  memory_config_h.jinja2  model_c.jinja2  model_h.jinja2  rtos_glue_c.jinja2
tests/: test_arena_planner.py  test_budget.py  test_codegen.py  test_detector.py  test_graph_compiler.py  test_loader.py  test_model_extractor.py  test_optimizer.py  test_quantizer.py  test_simplifier.py
validation/: BOARD_INTEGRATION.md  STM32F407_SETUP.md  main.c
