[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeforge"
version = "0.3.0-alpha"
description = "Toolchain for deploying AI models to embedded devices"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.9"
dependencies = [
    "onnx>=1.14", "onnxruntime>=1.16", "onnx-simplifier>=0.4",
    "numpy>=1.24", "jinja2>=3.1", "click>=8.1", "rich>=13.0", "pyyaml>=6.0",
]
[project.optional-dependencies]
dev   = ["pytest>=7.4", "pytest-cov", "black", "ruff"]
torch = ["torch>=2.0"]
tf    = ["tf2onnx>=1.14"]
[project.scripts]
edgeforge = "edgeforge.cli:main"
[tool.setuptools.packages.find]
where = ["."]
include = ["edgeforge*"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
